<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartBulb</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="status">Not Available</string>
    
    <string name="light_intensity">Light Intensity:</string>
    <string name="light_intensity_value">random</string>
    
    <string name="light_color">Light Color:</string>
    <string name="light_color_value">random</string>
    
    <string name="light_mode">Light Mode:</string>
    <string name="light_mode_value">custom</string>

</resources>
